--- a/DMO_Configuration_V2.json
+++ b/DMO_Configuration_V2.json
@@ -49,7 +49,7 @@
   },
   "MainUrl": [
     {
-      "TypeName": "GSP",
+      "TypeName": "DMO",
       "HomePageUrl": "https://discord.gg/6KMwB6UUsD",
       "GameDownloadUrl": "https://discord.gg/6KMwB6UUsD",
       "BanerUrl": "http://www.digimonmasters.com/launcher/GameLauncherBanner.aspx",
