--- a/REDMO_Configuration_V2.json
+++ b/REDMO_Configuration_V2.json
@@ -20,6 +20,10 @@
       {
         "Version": 319,
         "DownloadFile": "Launcher_319.zip"
+      },
+      {
+        "Version": 320,
+        "DownloadFile": "Launcher_320.zip"
       }
     ]
   },
