--- a/REDMO_Configuration_V2.json
+++ b/REDMO_Configuration_V2.json
@@ -15,7 +15,7 @@
     "DownloadPath": "https://raw.githubusercontent.com/emre098t/DDB_Launcher_2/main/Launcher/",
     "CurrentVersion": 320,
     "ExeFileName": "DMLauncher.exe",
-    "RunExeFileName": "GDMO.exe",
+    "RunExeFileName": "DMOLauncher.exe",
     "VersionList": [
       {
         "Version": 319,
