--- a/REDMO_Configuration_V2.json
+++ b/REDMO_Configuration_V2.json
@@ -7,9 +7,9 @@
     }
   },
   "PatchInfo": {
-    "DownloadUrl": "http://26.144.160.170:8080/Patch/",
+    "DownloadUrl": "https://raw.githubusercontent.com/emre098t/DDB_Launcher_2/Patch/",
     "MinPatchVersion": 0,
-    "PatchVersion": 20
+    "PatchVersion": 21
   },
   "LanuncherInfo": {
     "DownloadPath": "https://raw.githubusercontent.com/emre098t/DDB_Launcher_2/main/Launcher/",
