--- a/REDMO_Configuration_V2.json
+++ b/REDMO_Configuration_V2.json
@@ -7,7 +7,7 @@
     }
   },
   "PatchInfo": {
-    "DownloadUrl": "https://raw.githubusercontent.com/emre098t/DDB_Launcher_2/main/Patch/",
+    "DownloadUrl": "http://26.164.102.213:8080/Patch/",
     "MinPatchVersion": 1,
     "PatchVersion": 26
   },
