--- a/REDMO_Configuration_V2.json
+++ b/REDMO_Configuration_V2.json
@@ -7,7 +7,7 @@
     }
   },
   "PatchInfo": {
-    "DownloadUrl": "http://26.246.119.87:8080/Patch/",
+    "DownloadUrl": "https://raw.githubusercontent.com/emre098t/DDB_Launcher_2/main/Patch/",
     "MinPatchVersion": 27,
     "PatchVersion": 36
   },
