--- a/REDMO2_Configuration_V2.json
+++ b/REDMO2_Configuration_V2.json
@@ -81,6 +81,11 @@
             "Version": 322,
             "DownloadFile": "Launcher_322.zip"
           }
+	  ,
+	  {
+            "Version": 323,
+            "DownloadFile": "Launcher_323.zip"
+	  }
     ]
   },
   "UMInfo": {
